# AlgoLab

./: .gitattributes  .gitignore  README.md
Xmas/courier_testsets/: courier  courier.cpp
week1/Algo1/: .cproject  .project
week1/Algo1-BuildtheSum/: .cproject  .project
week1/Algo1-DeckofCards/: .cproject  .project
week1/Algo1-Dominoes/: .cproject  .project
week1/Algo1-EvenMatrices/: .cproject  .project
week1/Algo1-FalseCoin/: .cproject  .project
week1/AlgoLab1/: .cproject  .project  helloworld.c
week1/AlgoLab1_data/: test1.in
week10/.metadata/: version.ini
week10/Sith/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mytest1.out  sith  sith.cpp
week10/odd/: .cproject  .project
week10/stage/: .cproject  .project
week11/.metadata/: version.ini
week11/Carsharing/: .cproject  .project
week11/carsharing/: carsahring.cpp  carsharing
week11/clues/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  clues  clues_master  clues_master.cpp  clues_own  clues_own.cpp  cmake_install.cmake
week11/connectingroads/: connectingroads.cpp  roads  sample.in
week11/planks/: .cproject  .project
week11/planks_master/: .cproject  .project
week11/punch/: a.out  newpunch.cpp  punch  punch.cpp  punchalex.cpp
week11/punchit/: .cproject  .project
week12/.metadata/: version.ini
week6/: bgl_tutorial_2_flows.pdf.crdownload
week7/snippets/: CMakeCache.txt  CMakeLists.txt  Makefile  cancer_therapy  cmake_install.cmake  investment  investment.cpp  minimize
week8/: graypes.cpp
(+769 files in other folders)
